product flow image

--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
       <div class="life-background_title english">
         <h2>Products</h2>
       </div>
+      <div class="product-flow">
+        <img src="./images/productFlow.jpeg" class="product-flow-pic">
+      </div>
       <div class="project-line">
         <div class="project-box project-box-1">
           <div class="project-info">
