partners contact added and responsiveness improved

--- a/index.html
+++ b/index.html
@@ -89,19 +89,22 @@
           <div class="workflow-text-topic">
             <h3>Data</h3>
             <p>
-              We receive your data applying all pre-processing needed to prepare them to be analized.
+              We receive your data applying all pre-processing needed to prepare
+              them to be analized.
             </p>
           </div>
           <div class="workflow-text-topic">
             <h3>Analisys</h3>
             <p>
-              Insights and solutions are generated from deeply analyses on your data.
+              Insights and solutions are generated from deeply analyses on your
+              data.
             </p>
           </div>
           <div class="workflow-text-topic">
             <h3>Results</h3>
             <p>
-              Objective outcomes are sent to you optimizing your time and improving your profits.
+              Objective outcomes are sent to you optimizing your time and
+              improving your profits.
             </p>
           </div>
         </div>
@@ -309,46 +312,68 @@
     <div class="social_media">
       <ul>
         <li>
-          <a href="mailto:andre.94.cavalcante@gmail.com">
+          <a href="mailto:test@gmail.com">
             <img src="images/gmail.png" alt="On Github" />
           </a>
         </li>
         <li>
-          <a
-            href="https://www.linkedin.com/in/andr%C3%A9-cavalcante-b9b4b0130/"
-            target="_blank"
-            alt="Linkedin"
-          >
+          <a href="https://www.linkedin.com/" target="_blank" alt="Linkedin">
             <img src="images/linkedin.png" alt="On Linkedin" class="white-bg" />
           </a>
         </li>
-        <!-- <li>
-        <a href="https://github.com/andre94cavalcante" target="_blank" alt="Github">
-          <img src="images/iconmonstr-github-3-240.png" alt="On Github" class='white-bg' />
-        </a>
-      </li> -->
       </ul>
     </div>
 
     <div class="contact-overlay" onclick="contactOverlayOff()"></div>
     <div class="contact-overlay-options-card">
-      <p class="contact-msg english">
-        If you wanna get in touch, send an email to
-        <a href="mailto:andre.94.cavalcante@gmail.com">
-          <b>andre.94.cavalcante@gmail.com</b> </a
-        >or feel free to use any of the following options:
-      </p>
-      <div class="contact-overlay-options">
-        <a
-          href="https://www.linkedin.com/in/andr%C3%A9-cavalcante-b9b4b0130/"
-          target="_blank"
-          alt="Linkedin"
-        >
-          <img src="images/linkedin.png" alt="On Linkedin" />
-        </a>
-        <!-- <a href="https://github.com/andre94cavalcante" target="_blank" alt="Github">
-        <img src="images/iconmonstr-github-3-240.png" alt="On Github" />
-      </a> -->
+      <p class="contact-msg english">Contact Us:</p>
+      <div class="contact-partners">
+        <div class="contact-partner-card">
+          <img src="./images/Paulo.jpeg" class="contact-partner-profile" />
+          <div class="contact-overlay-options">
+            <h3>CEO - Paulo</h3>
+            <a
+              href="https://www.linkedin.com/in/paulo-henrique-polegato-b095b932/"
+              target="_blank"
+              alt="Linkedin"
+              >
+              <img src="images/linkedin.png" alt="On Linkedin" />
+            </a>
+            <a href="mailto:test@gmail.com">
+              <img src="images/gmail.png" alt="On Github" />
+            </a>
+            <a
+              href="https://github.com/andre94cavalcante"
+              target="_blank"
+              alt="Github"
+            >
+              <img src="images/iconmonstr-github-3-240.png" alt="On Github" />
+            </a>
+          </div>
+        </div>
+        <div class="contact-partner-card">
+          <img src="./images/Christian.jpeg" class="contact-partner-profile" />
+          <div class="contact-overlay-options">
+            <h3>CTO - Cristian</h3>
+            <a
+              href="https://www.linkedin.com/in/christian-lacerda-435226128/"
+              target="_blank"
+              alt="Linkedin"
+            >
+              <img src="images/linkedin.png" alt="On Linkedin" />
+            </a>
+            <a href="mailto:test@gmail.com">
+              <img src="images/gmail.png" alt="On Github" />
+            </a>
+            <a
+              href="https://github.com/andre94cavalcante"
+              target="_blank"
+              alt="Github"
+            >
+              <img src="images/iconmonstr-github-3-240.png" alt="On Github" />
+            </a>
+          </div>
+        </div>
       </div>
     </div>
 
