personal info and dummy files removed

--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
               <img src="images/gmail.png" alt="On Github" />
             </a>
             <a
-              href="https://github.com/andre94cavalcante"
+              href="https://github.com/"
               target="_blank"
               alt="Github"
             >
@@ -366,7 +366,7 @@
               <img src="images/gmail.png" alt="On Github" />
             </a>
             <a
-              href="https://github.com/andre94cavalcante"
+              href="https://github.com/"
               target="_blank"
               alt="Github"
             >
