--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
         <div class="contact-partner-card">
           <img src="./images/Christian.jpeg" class="contact-partner-profile" />
           <div class="contact-overlay-options">
-            <h3>CTO - Cristian</h3>
+            <h3>CTO - Christian</h3>
             <a
               href="https://www.linkedin.com/in/christian-lacerda-435226128/"
               target="_blank"
