christian github added

--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
               <img src="images/gmail.png" alt="On Github" />
             </a>
             <a
-              href="https://github.com/"
+              href="https://github.com/cmflacerda"
               target="_blank"
               alt="Github"
             >
